...
    
    func showGameOverAlert() {
        let message = presenter.makeResultMessage()
        let alertModel = AlertModel(title: "Этот раунд окончен",
                                    message: message,
                                    buttonText: "Сыграть еще раз",
                                    identifier: "Game over")
        alertModel.completion = {
            self.presenter.restartGame()
            self.presenter.requestNextQuestion()
        }
        
        alertPresenter?.present(model: alertModel)
...
